2008-07-22  Maurice van der Pot  <griffon26@kfk4ever.com>

	* src/Makefile.am:
	Now building everything in src/ except planner_main.c into a convenience
	library that can be used for testing.

	* src/planner-cmd-manager.c (transaction_cmd_do): Abort redo-ing as soon as
	the end of the transaction is encountered. Fixes bug #420443 reported by
	Lincoln Phipps <lincoln.phipps@openmutual.net>.

	* tests/Makefile.am:
	* tests/cmd-manager-test.c (test_cmd_do), (test_cmd_undo),
	(test_cmd_free), (test_cmd), (main):
	Added test for PlannerCmdManager, including regression test for bug #420443.

2008-07-22  Maurice van der Pot  <griffon26@kfk4ever.com>

	* libplanner/mrp-paths-gnome.c (mrp_paths_get_image_dir):
	Fix path to images, which was incorrectly set to "glade" in previous commit.

2008-07-22  Maurice van der Pot  <griffon26@kfk4ever.com>

	* libplanner/mrp-calendar.c (mrp_calendar_copy):
	Fix a bug in copying default day types when copying a calendar on 64-bit
	platforms.

	* tests/calendar-test.c (main):
	Fixed a bug in the tests that only showed up on 64-bit platforms.

	* libplanner/Makefile.am:
	* libplanner/mrp-paths-gnome.c (mrp_paths_get_glade_dir),
	(mrp_paths_get_image_dir), (mrp_paths_get_plugin_dir),
	(mrp_paths_get_dtd_dir), (mrp_paths_get_stylesheet_dir),
	(mrp_paths_get_storagemodule_dir),
	(mrp_paths_get_file_modules_dir), (mrp_paths_get_ui_dir),
	(mrp_paths_get_sql_dir):
	* tests/Makefile.am:
	* tests/files/Makefile.am:
	Allow various paths to be overridden through environment variables, so the
	tests can be run before planner (and its plugins) have been installed.
	Now tests are run successfully in make check and make distcheck.

2008-07-20  Maurice van der Pot  <griffon26@kfk4ever.com>

	* libplanner/mrp-sql.c: Properly fixed bug #539993.

2008-07-20  Maurice van der Pot  <griffon26@kfk4ever.com>

	* acinclude.m4: change --with-compile-warnings to --enable-compile-warnings
	* autogen.sh: fix error from sed when running autogen.sh